--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "Promise"
   ],
   "devDependencies": {
-    "rollup": "^1.17.0",
-    "rollup-plugin-buble": "^0.19.8",
-    "terser": "^4.1.2"
+    "@rollup/plugin-buble": "^0.21.3",
+    "rollup": "^2.17.1",
+    "terser": "^4.8.0"
   }
 }
