--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "events-promisify",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Just another JavaScript EventEmitter for Promise.",
-  "main": "dist/events-promisify.es.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "node build.js"
+    "build": "rollup -c rollup.config.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,11 @@
     "Promise"
   ],
   "devDependencies": {
-    "@rollup/plugin-buble": "^0.21.3",
-    "rollup": "^2.17.1",
-    "terser": "^4.8.0"
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
+    "rollup": "^2.68.0",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   }
 }
