--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "events-promisify",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Just another JavaScript EventEmitter for Promise.",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
+  "jsdelivr": "dist/index.umd.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "microbundle --format esm,cjs,umd --name EventEmitter",
     "test": "jest"
   },
   "repository": {
@@ -23,11 +26,10 @@
     "Promise"
   ],
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
-    "rollup": "^2.68.0",
+    "microbundle": "^0.14.2",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   }
 }
